--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<!-- Section: intro -->
     <section id="intro" class="intro">
 		<div class="slogan">
-			<strong><h1>Sistema de Portabilidade</h1></strong>
+			<strong><h1>Sistema de portabilidade númerica</h1></strong>
 			<strong><p>econômia na medida certa para sua empresa</p></strong>
 			<a href="#service" class="btn btn-skin scroll">Leia mais</a>
 		</div>	
@@ -213,7 +213,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="section-heading">
 					<h2>Nossos Planos</h2>
-					<p>Escolha o melhor plano para sua empresa...</p>
+					<p>Assine <strong>GRÁTIS</strong> por 30 dias nosso plano <strong>ILIMITADO</strong>. Após o periodo de 30 dias, você pode cancelar ou assinar um de nossos planos.</p>
 					</div>
 				</div>
 			</div>
@@ -230,16 +230,13 @@
                             <h3>Plano 1.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 19,90 por recarga</strong></p>
+                            <p><strong>R$ 25,00 por recarga</strong></p>
                         </div>
                         <ul class="list-group text-center">
-                            <li class="list-group-item">R$ 0,02 por consulta</li>
+                            <li class="list-group-item">R$ 0,025 por consulta</li>
                             <li class="list-group-item">---</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
-                        <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-danger" href="#">Contrate Agora!</a>
-                        </div>
                     </div>
                 </div>
                 <!-- /item -->
@@ -248,19 +245,16 @@
                     <div class="panel panel-warning panel-pricing">
                         <div class="panel-heading">
                             <i class="fa fa-desktop"></i>
-                            <h3>Plano 3.000</h3>
+                            <h3>Plano 2.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 49,90 por recarga</strong></p>
+                            <p><strong>R$ 40,00 por recarga</strong></p>
                         </div>
                         <ul class="list-group text-center">
-                            <li class="list-group-item">R$ 0,015 por consulta</li>
+                            <li class="list-group-item">R$ 0,02 por consulta</li>
                             <li class="list-group-item">---</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
-                        <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-warning" href="#">Contrate Agora!</a>
-                        </div>
                     </div>
                 </div>
                 <!-- /item -->
@@ -270,19 +264,16 @@
                     <div class="panel panel-success panel-pricing">
                         <div class="panel-heading">
                             <i class="fa fa-desktop"></i>
-                            <h3>Plano 6.000</h3>
+                            <h3>Plano 5.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 69,90 por recarga</strong></p>
+                            <p><strong>R$ 75,00 por recarga</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,015 por consulta</li>
-                            <li class="list-group-item">3.000 créditos em bonus</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">500 créditos em bonus</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
-                        <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-success" href="#">Contrate Agora!</a>
-                        </div>
                     </div>
                 </div>
                 <!-- /item -->
@@ -293,16 +284,13 @@
                             <h3>Plano 10.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 99,90 por recarga</strong></p>
+                            <p><strong>R$ 100,00 por recarga</strong></p>
                         </div>
                         <ul class="list-group text-center">
-                            <li class="list-group-item">R$ 0,02 por consulta</li>
-                            <li class="list-group-item">5.000 créditos em bonus</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">R$ 0,01 por consulta</li>
+                            <li class="list-group-item">2.000 créditos em bonus</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
-                        <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-danger" href="#">Contrate Agora!</a>
-                        </div>
                     </div>
                 </div>
                 <!-- /item -->
@@ -314,16 +302,13 @@
                             <h3>Plano 20.000</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 129,90 por recarga</strong></p>
+                            <p><strong>R$ 200,00 por recarga</strong></p>
                         </div>
                         <ul class="list-group text-center">
-                            <li class="list-group-item">R$ 0,015 por consulta</li>
-                            <li class="list-group-item">10.000 créditos em bonus</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">R$ 0,01 por consulta</li>
+                            <li class="list-group-item">2.000 créditos em bonus</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
-                        <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-warning" href="#">Contrate Agora!</a>
-                        </div>
                     </div>
                 </div>
                 <!-- /item -->
@@ -336,15 +321,15 @@
                             <h3>Plano Ilimitado</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>R$ 169,90 por recarga</strong></p>
+                            <p><strong>R$ 250,00 por MÊS</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,00 por consulta</li>
                             <li class="list-group-item">Consultas ilimitadas</li>
-                            <li class="list-group-item">Cancele quando quiser</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-success" href="#">Contrate Agora!</a>
+                            <a class="btn btn-lg btn-block btn-success" href="http://consulta.cdr-port.net/">Grátis por 30 dias</a>
                         </div>
                     </div>
                 </div>
@@ -364,7 +349,6 @@
 	
 					<div class="section-heading">
 					<h2>Entre em contato</h2>
-					<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
 					</div>
 				
 				</div>
@@ -468,7 +452,7 @@
 	<script src="js/stellar.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
-
+<script type="text/javascript"> /* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */ (function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.id = id; js.src = "//bettercontactform.com/contact/media/1/b/1bcd879c44e2c60da2209091089db309519f8f3e.js"; fjs.parentNode.insertBefore(js, fjs); }(document, "script", "bcf-render"));</script> <a id="bcf_trigger" href="http://bettercontactform.com" rel="bcf_trigger">Contact Form</a>
 </body>
 
 </html>
