--- a/index.html
+++ b/index.html
@@ -452,7 +452,14 @@
 	<script src="js/stellar.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
-<script type="text/javascript"> /* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */ (function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.id = id; js.src = "//bettercontactform.com/contact/media/1/b/1bcd879c44e2c60da2209091089db309519f8f3e.js"; fjs.parentNode.insertBefore(js, fjs); }(document, "script", "bcf-render"));</script> <a id="bcf_trigger" href="http://bettercontactform.com" rel="bcf_trigger">Contact Form</a>
+<script type="text/javascript">
+/* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */
+(function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.id = id;
+    js.src = "//bettercontactform.com/contact/media/3/4/3403c50b1a84e025fc23e967a5b8a241660c385e.js";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, "script", "bcf-render"));</script>
+<a id="bcf_trigger" href="http://bettercontactform.com" rel="bcf_trigger">Contact Form</a>
 </body>
 
 </html>
