--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
 	<!-- /Section: works -->
 
 	<!-- Section: contact -->
+	<!--
     <section id="contact" class="home-section text-center">
 		<div class="heading-contact marginbot-50">
 			<div class="container">
@@ -356,7 +357,7 @@
 			</div>
 		</div>
 		<div class="container">
-<!--
+
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
@@ -428,7 +429,7 @@
 
 		</div>
 	</section>
-	 /Section: contact -->
+	 /Section: contact 
 
 	<footer>
 		<div class="container">
@@ -439,7 +440,7 @@
 				</div>
 			</div>	
 		</div>
-	</footer>
+	</footer>-->
 
     <!-- Core JavaScript Files -->
     <script src="js/jquery.min.js"></script>
