--- a/index.html
+++ b/index.html
@@ -341,7 +341,6 @@
 	<!-- /Section: works -->
 
 	<!-- Section: contact -->
-	<!--
     <section id="contact" class="home-section text-center">
 		<div class="heading-contact marginbot-50">
 			<div class="container">
@@ -429,7 +428,7 @@
 
 		</div>
 	</section>
-	 /Section: contact 
+	<!-- /Section: contact -->
 
 	<footer>
 		<div class="container">
@@ -440,7 +439,7 @@
 				</div>
 			</div>	
 		</div>
-	</footer>-->
+	</footer>
 
     <!-- Core JavaScript Files -->
     <script src="js/jquery.min.js"></script>
