--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 						</div><!-- /gn-scroller -->
 					</nav>
 				</li>
+                <li><a>31-4062-7330</a></li>
+                <li><a href="mailto:comercial@cdr-port.net">comercial@cdr-port.net</a></li>
 				<li><a href="index.html">CDR-Port</a></li>
 			</ul>
 	</div>
@@ -416,11 +418,7 @@
 				</div>
 				
 				<div class="col-lg-6">
-				<address>
-				  <strong>Email</strong><br>
-				  <a href="mailto:comercial@cdr-port.net">comercial@cdr-port.net</a><br />
 
-				</address>	
 			
 				</div>
 			</div>	
@@ -454,6 +452,8 @@
 	<script src="js/stellar.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
+
+
 </body>
 
 </html>
