--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 		
 					<div class="section-heading">
-					<h2>Portabilidade</h2>
+					<h2>Portabilidade Númerica</h2>
 					<p>Sistema On-Line com atualizações diarias.</p>
 					</div>
 			
