--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<!-- Section: intro -->
     <section id="intro" class="intro">
 		<div class="slogan">
-			<strong><h1>Sistema de portabilidade númerica</h1></strong>
+			<strong><h1>Sistema de portabilidade numérica</h1></strong>
 			<strong><p>econômia na medida certa para sua empresa</p></strong>
 			<a href="#service" class="btn btn-skin scroll">Leia mais</a>
 		</div>	
@@ -140,7 +140,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 		
 					<div class="section-heading">
-					<h2>Portabilidade Númerica</h2>
+					<h2>Portabilidade Numérica</h2>
 					<p>Sistema On-Line com atualizações diarias.</p>
 					</div>
 			
