--- a/index.html
+++ b/index.html
@@ -61,76 +61,6 @@
 		</div>	
     </section>
 	<!-- /Section: intro -->
-
-	<!-- Section: about 
-    <section id="about" class="home-section text-center bg-gray">
-		<div class="heading-about marginbot-50">
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2">
-		
-					<div class="section-heading">
-					<h2>About us</h2>
-					<p>Lorem ipsum dolor sit amet, no nisl mentitum recusabo per, vim at blandit qualisque dissentiunt. Diam efficiantur conclusionemque ut has</p>
-					</div>
-			
-				</div>
-			</div>
-			</div>
-		</div>
-		<div class="container">
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Anna Hanaceck</h5>
-                        <p class="subtitle">Pixel Crafter</p>
-                        <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive" /></div>
-                    </div>
-                </div>
-		
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Maura Daniels</h5>
-                        <p class="subtitle">Ruby on Rails</p>
-                        <div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive" /></div>
-                    </div>
-
-				</div>
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-		
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Jack Briane</h5>
-                        <p class="subtitle">jQuery Ninja</p>
-                        <div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive" /></div>
-                    </div>
-                </div>
-		
-            </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-		
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Tom Petterson</h5>
-                        <p class="subtitle">Typographer</p>
-                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive" /></div>
-                    </div>
-                </div>
-	
-            </div>
-        </div>		
-		</div>
-	</section>
-	/Section: about -->
-	
-	
 	<!-- Section: services -->
     <section id="service" class="home-section text-center">
 		
@@ -331,7 +261,7 @@
                             <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-success" href="http://consulta.cdr-port.net/">Grátis por 30 dias</a>
+                            <a class="btn btn-lg btn-block btn-success" href="http://consulta.cdr-port.net/" target="_blank">Grátis por 30 dias</a>
                         </div>
                     </div>
                 </div>
