--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/portabilidade/contato/">
+                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/contato/">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
                                 Nome</label>
-                            <input type="text" class="form-control" id="name" placeholder="Nome" required="required" />
+                            <input type="text" class="form-control" name="name" id="name" placeholder="Nome" required="required" />
                         </div>
                         <div class="form-group">
                             <label for="email">
@@ -306,7 +306,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" id="email" placeholder="Email" required="required" /></div>
+                                <input type="email" class="form-control" name="email" ="email" id="email" placeholder="Email" required="required" /></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
