--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/contato/">
+                <form id="contact-form" method="POST" action="http://127.0.0.1:8000/portabilidade/contato/">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -306,16 +306,16 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" name="email" ="email" id="email" placeholder="Email" required="required" /></div>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required="required" /></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
                                 Assunto</label>
                             <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Escilha um assunto:</option>
-                                <option value="service">Suporte</option>
-                                <option value="suggestions">Sugestões</option>
-                                <option value="product">Comercial</option>
+                                <option value="na" selected="">Escolha um assunto:</option>
+                                <option value="Suporte">Suporte</option>
+                                <option value="Sugestões">Sugestões</option>
+                                <option value="Comercial">Comercial</option>
                             </select>
                         </div>
                     </div>
