--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@
                         </div>
                         <div class="form-group">
                             <label for="email">
+                                Telefone</label>
+                            <div class="input-group">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span>
+                                </span>
+                                <input type="phone" class="form-control" name="phone" id="phone" placeholder="Telefone" required="required" /></div>
+
+                            <label for="email">
                                 Email</label>
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
@@ -312,7 +319,7 @@
                             <label for="subject">
                                 Assunto</label>
                             <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Escolha um assunto:</option>
+                                <option value="Sem assunto" selected="">Escolha um assunto:</option>
                                 <option value="Suporte">Suporte</option>
                                 <option value="Sugestões">Sugestões</option>
                                 <option value="Comercial">Comercial</option>
@@ -323,7 +330,7 @@
                         <div class="form-group">
                             <label for="name">
                                 Mensagem</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
+                            <textarea name="message" id="message" class="form-control" rows="11" cols="25" required="required"
                                 placeholder="Mensagem"></textarea>
                         </div>
                     </div>
