--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="intro" class="intro">
 		<div class="slogan">
 			<strong><h1>Sistema de portabilidade numérica</h1></strong>
-			<strong><p>econômia na medida certa para sua empresa</p></strong>
+			<strong><p>economia na medida certa para sua empresa</p></strong>
 			<a href="#service" class="btn btn-skin scroll">Leia mais</a>
 		</div>	
     </section>
