--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		
 					<div class="section-heading">
 					<h2>Portabilidade Numérica</h2>
-					<p>Sistema On-Line com atualizações diarias.</p>
+					<p>Sistema On-Line com atualizações diárias.</p>
 					</div>
 			
 				</div>
@@ -88,7 +88,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Estatisticas</h5>
-						<p>Analize de custo por operadora. Saiba exatamente quanto cusa sua telefonia.</p>
+						<p>Análise de custo por operadora. Saiba exatamente quanto cusa sua telefonia.</p>
 					</div>
                 </div>
 	
@@ -292,7 +292,7 @@
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/portabilidade/contato/">
+                <form id="contact-form" method="POST" action="http://consulta.cdr-port/portabilidade/contato/">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
