--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<i class="fa fa-list fa-3x"></i>
 					</div>
 					<div class="service-desc">
-						<h5>Estatisticas</h5>
+						<h5>Estatísticas</h5>
 						<p>Análise de custo por operadora. Saiba exatamente quanto cusa sua telefonia.</p>
 					</div>
                 </div>
@@ -292,7 +292,7 @@
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://consulta.cdr-port/portabilidade/contato/">
+                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/portabilidade/contato/">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
