--- a/index.html
+++ b/index.html
@@ -260,13 +260,40 @@
                             <li class="list-group-item">Consultas ilimitadas</li>
                             <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
+
+                    </div>
+                </div>
+                <!-- /item -->
+
+                <div class="col-md-4 text-center">
+                </div>
+                <!-- /item -->
+                <!-- item -->
+                <div class="col-md-4 text-center">
+                    <div class="panel panel-warning panel-pricing">
+                        <div class="panel-heading">
+                            <i class="fa fa-desktop"></i>
+                            <h3>Teste grátis</h3>
+                        </div>
+                        <div class="panel-body text-center">
+                            <p><strong>500 Consultas Grátis</strong></p>
+                        </div>
+                        <ul class="list-group text-center">
+                            <li class="list-group-item">R$ 0,00 por consulta</li>
+                            <li class="list-group-item">500 créditos em bonus</li>
+                            <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
+                        </ul>
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-success" href="http://consulta.cdr-port.net/" target="_blank">Grátis por 30 dias</a>
+                            <a class="btn btn-lg btn-block btn-warning" href="http://consulta.cdr-port.net/" target="_blank">Grátis por 30 dias</a>
                         </div>
                     </div>
                 </div>
                 <!-- /item -->
 
+                <!-- item -->
+                <div class="col-md-4 text-center">
+                </div>
+                <!-- /item -->
             </div>	
 		</div>
 	</section>
