--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                             <h3>Teste grátis</h3>
                         </div>
                         <div class="panel-body text-center">
-                            <p><strong>500 Consultas Grátis</strong></p>
+                            <p><strong>500 Consultas grátis</strong></p>
                         </div>
                         <ul class="list-group text-center">
                             <li class="list-group-item">R$ 0,00 por consulta</li>
-                            <li class="list-group-item">500 créditos em bonus</li>
+                            <li class="list-group-item">500 consultas grátis para testar nosso sistema</li>
                             <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
                         <div class="panel-footer">
