--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="section-heading">
 					<h2>Nossos Planos</h2>
-					<p>Assine <strong>GRÁTIS</strong> por 30 dias nosso plano <strong>ILIMITADO</strong>. Após o periodo de 30 dias, você pode cancelar ou assinar um de nossos planos.</p>
+					<p>Teste <strong>GRÁTIS</strong> 500 Consultas. Após o período de teste, você pode cancelar ou assinar um de nossos planos.</p>
 					</div>
 				</div>
 			</div>
