--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             <li class="list-group-item">Cancele quando quiser sem compromisso mensal</li>
                         </ul>
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-warning" href="http://consulta.cdr-port.net/" target="_blank">Teste grátis agora!</a>
+                            <a class="btn btn-lg btn-block btn-warning" href="http://consulta.cdr-port.net/conta/register/" target="_blank">Teste grátis agora!</a>
                         </div>
                     </div>
                 </div>
