--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <div class="row">
         <div class="col-lg-8 col-md-offset-2">
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://127.0.0.1:8000/portabilidade/contato/">
+                <form id="contact-form" method="POST" action="http://consulta.cdr-port.net/portabilidade/contato/">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
