--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <!-- /item -->
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="section-heading">
-                    <p> <i class="fa fa-asterisk"></i> O sistema de cache varia de acordo com o plano contratado. O sistema de cache varia entre 15,30,45,60 minutos. Detro do período de cache um número já consultado não será cobrado.</p>
+                    <p> <i class="fa fa-asterisk"></i> O sistema de cache varia de acordo com o plano contratado. O sistema de cache varia entre 15,30,45,60 minutos. Detro do período de cache, um número já consultado não será tarifado novamente.</p>
                     </div>
                 </div>
                 <!-- item -->
