--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Consulta de portabilidade numérica compatível com os pricipais IPBX do mercado Brasileiro.">
+    <meta name="keywords" content="Portabilidade, Portabilidade numérica, consulta portabilidade numérica">
+    <meta name="author" content="CDR-Port">
 
-    <title>CDR-Port</title>
+    <title>CDR-Port: Portabilidade numérica</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -37,10 +38,10 @@
 									<input placeholder="Search" type="search" class="gn-search">
 									<a class="gn-icon gn-icon-search"><span>Search</span></a>
 								</li>
-								<li><a href="#service" class="gn-icon gn-icon-cog">Portabilidade</a></li>
-								<li><a href="#plans" class="gn-icon gn-icon-help">Preços</a></li>
+								<li><a href="#service" title="Portabilidade numérica CDR-Port" class="gn-icon gn-icon-cog">Portabilidade</a></li>
+								<li><a href="#plans" title="Preço portabilidade numérica" class="gn-icon gn-icon-help">Preços</a></li>
 								<li>
-									<a href="#contact" class="gn-icon gn-icon-archive">Contato</a>
+									<a href="#contact" title="Formulário contato portabilidade numérica" class="gn-icon gn-icon-archive">Contato</a>
 								</li>
 							</ul>
 						</div><!-- /gn-scroller -->
