--- a/parceiros/index.html
+++ b/parceiros/index.html
@@ -244,7 +244,7 @@
 					
 					<ul class="descp lead2">
 						<li><i class="glyphicon glyphicon-envelope"></i> Suporte por email</li>
-						<li><i class="fa fa-skype"></i> Suporte via Skype</li>
+						<li><i class="glyphicon glyphicon-comment"></i> Suporte via chat</li>
 						<li><i class="glyphicon glyphicon-phone"></i> Suporte via VOZ (Telefone, Skype, Google hangout)</li>
 					</ul>
 				</div>           
