--- a/parceiros/index.html
+++ b/parceiros/index.html
@@ -111,7 +111,7 @@
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">Sistema de portabilidade númerica</h3>
-					<div class="sub-title lead3">Surge uma nova oportunidade de negócio</div>
+					<div class="sub-title lead3">Surge uma nova oportunidade de negócio.</div>
                     <p class="lead">
 						O custo de telefônica no Brasil é um dos mais caros do mundo. Especialmente na telefonia celular. Mas existem formas de reduzir este custo utilizando a rota de chamada correta para realizar uma ligação. Sabendo qual a operadora do número de destino. Mas aí entra o problema que a portabilidade numérica introduziu. Hoje, a única forma de saber qual a operadora correta é ligando para o destino e perguntando, ou, fazendo uma consulta dinâmica à uma das bases de portabilidade disponíveis.
 					</p>
@@ -120,8 +120,6 @@
 
 						Uma vez configurado no PABX do seu cliente, o CDR-Port é um sistema que faz a identificação da rota de menor custo pela determinação da prestadora portadora do número de destino (numero de B). Com isso, ao completar uma chamada externa, o PABX, desde que configurado corretamente e tendo chip da operadora correta, poderá utilizar as rotas de menor custo para completar a chamada. O custo desta ligação pode ser próximo de zero!
 					</p>
-					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
-					 <a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a></p>
 				</div>   
             </div>
         </div>
