--- a/parceiros/index.html
+++ b/parceiros/index.html
@@ -54,7 +54,7 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Parceiros de negócios</h1>
+			<h1 class="h1_home wow fadeIn " data-wow-delay="0.4s">Parceiros de negócios</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">CDR-Port</h3>
 			<ul class="list-inline intro-social-buttons">
 			<!--
@@ -399,9 +399,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
-				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p> 
+				<h2>Seja nosso parceiro</h2>
+				<p class="lead" style="margin-top:0">Nosso compromisso é com</p>
 			 </div>
 			</div>
 		</div>
