--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Estatísticas</h5>
-						<p>Análise de custo por operadora. Saiba exatamente quanto cusa sua telefonia.</p>
+						<p>Análise de custo por operadora. Saiba exatamente quanto custa sua telefonia.</p>
 					</div>
                 </div>
 	
