--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -37,7 +37,7 @@
 	      						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					        		<span class="ion-navicon"></span>
 					      		</button>
-					      		<a class="navbar-brand" href="#">CDR-Port</a>
+					      		<a class="navbar-brand" href="http://www.cdr-port.net/">CDR-Port</a>
 					    	</div>
 	    					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      					<ul class="nav navbar-nav navbar-right">
