--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</div><!-- /gn-scroller -->
 					</nav>
 				</li>
-                <li><a>31-4062-7330</a></li>
+                <li><a>Fone: 31-4062-7330 / SKYPE: CDR-Port</a></li>
                 <li><a href="http://cdr-port.net/detalhes/">Como funciona?</a></li>
                 <li><a href="http://parceiros.cdr-port.net" target="_blank">Torne-se um parceiro</a></li>
 				<li><a href="index.html">CDR-Port</a></li>
