--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -44,6 +44,7 @@
 		      						<li><a href="#about">Portabilidade</a></li>
 		      						<li><a href="#our_service">Recursos</a></li>
 		        					<li><a href="#blog">Como funciona?</a></li>
+		        					<li><a href="http://www.cdr-port.net/#plans" target="_blank">Preços</a></li>
 							    </ul>
 	    					</div>	<!-- collapse navbar-collapse -->
 	  					</div>	<!-- container-fluid -->
