--- a/detalhes/index.html
+++ b/detalhes/index.html
@@ -152,7 +152,7 @@
 			        			<div class="about-service">
 			        				<h3 class="text-center">Compatível</h3>
 			        				<p class="text-center">
-			        					Compatível com as principais centrais IPBX do mercado. Asterisk, Intelbras, Leucotron, Panasonic, Digistar. Também compatível com Gateways GSM como GoIP, Dinstar, dentre outras.
+			        					Compatível com as principais centrais IPBX do mercado. Asterisk, Intelbras, DigiStar Panasonic, Digistar. Também compatível com Gateways GSM como GoIP, Dinstar, dentre outras.
 			        				</p>
 			        			</div>
 			        		</div>	<!-- col-sm-4 -->
